<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile Business</string>

    <!-- ///// loading语言 //// -->
    <string name="menu_settings">Settings</string>
    <string name="activity_loading_text">Loading&#8230;</string>

    <!-- ///// 登录语言 //// -->
    <string name="activity_login_loginbutton_text">Login</string>
    <string name="activity_login_loginbutton_loading">Logining in&#8230;</string>
    <string name="activity_login_prompt_title">Hand Mobile Business</string>
    <string name="activity_login_prompt_username">User Name：</string>
    <string name="activity_login_prompt_password">Password：</string>
    <!-- ///// 结束 //// -->


    <!-- ///// 待办语言 //// -->
    <string name="activity_todo_list_actionitem_approve">Approve</string>
    <string name="activity_todo_list_actionitem_deny">Deny</string>
    <string name="title_activity_todo_list">Todo List</string>
    <string name="title_activity_approve_detail">details</string>
    <string name="title_activity_loading">Loading</string>
    <string name="title_activity_deliver">deliver</string>

    <!-- ///// 转交语言 //// -->
    <string name="activity_diliver_prompt_to">deliver to</string>
    
    <string name="title_activity_function_list">Mobile Business</string>

	    <string name="pref_header_general">Basic Settings</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>
    <string name="pref_title_display_name">Server Address</string>
    <string name="pref_default_display_name">http://</string>
    <string name="pref_default_dialog_message">Warning, modify the address will cause the program to empty all cache information and exit the account!</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="action_settings">Settings</string>
    <string name="app_head">汉得移动商务</string>
    <string name="app_subhead">Hand Mobile Business</string>
	<string name="app_password">请输入密码</string>
	<string name="app_username">请输入用户名</string>
	<string name="app_login">登录</string>
	<string name="app_passwordfind">忘记密码了？</string>
	<string name="app_copyright">Hand Information Copy Right 2014</string>
	<string name="homePageTitle">首页</string>
	<string name="buttonName">记一单</string>
	<string name="EdisonChen">拍一张</string>
	<string name="price">0</string>
	<string name="amountLabel">总金额</string>
	<string name="quantityLabel">数量</string>
	<string name="detailTypeLabel">费用</string>
	<string name="placeLabel">地点</string>
	<string name="dateLabel">日期从</string>
	<string name="dateLabel1">至</string>
	<string name="savelabel">保存</string>
	<string name="pin">pin</string>
	<string name="sumLabel">累计：</string>
	
	<!--  /// 手势相关  ///  -->
    
    <string name="cancel">取消</string>
    <string name="ready">绘制解锁图案</string>
    <string name="try_again">重新设置手势</string>
    <string name="goon">再次绘制解锁图案</string>
    <string name="confirm">确认</string>
    <string name="wrong">与上一次绘制不一致，请重新绘制</string>
    <string name="lockpattern_recording_incorrect_too_short" >"至少连接4个点，请重试"</string>
    <string name="lockpattern_error" >"手势密码不对"</string>

    <!-- Accessibility description sent when user starts drawing a lock pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <!-- Accessibility description sent when the pattern times out and is cleared. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <!-- Accessibility description sent when user adds a cell to the pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <!-- Accessibility description sent when user completes drawing a pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    
    <string name="currencyLabel">币种</string>
    <string name="exchangeRateLabel">汇率</string>
</resources>
