<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/loginbg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:maxLines="1"
        android:text="@string/app_head"
        android:textColor="@color/white"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:text="@string/app_subhead" />

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:hint="@string/app_username"
		android:inputType="textVisiblePassword"
        android:singleLine="true" 
        >

        <requestFocus
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/app_password"
        android:inputType="textPassword" >

    </EditText>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="fill_parent"
                android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/app_login" 
        android:background="@drawable/btn_press_selector"
        android:textColor="#fff"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical" 
        android:gravity="bottom"
        android:layout_weight="1">

        
            <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="0dp"
        android:text="@string/app_passwordfind" 
        />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_copyright" 
            android:layout_margin="15dp"/>
    </LinearLayout>

</LinearLayout>