<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.hand"
    android:id="@+id/framelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/detail_line_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical" >

        <include layout="@layout/other_header" />

        <LinearLayout
            android:id="@+id/detail_line_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:background="#f7f7d7"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/cameraImageView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:contentDescription="@string/EdisonChen"
                android:scaleType="fitXY"
                android:src="@drawable/camera" />

            <ui.custom.component.NumberText
                android:id="@+id/priceNumberText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="7"
                android:background="#00000000"
                android:cursorVisible="false"
                android:ems="10"
                android:gravity="right|center_vertical"
                android:hint="0"
                android:inputType="numberDecimal"
                android:maxLength="10"
                android:textColor="#003771"
                custom:precision="2" >
            </ui.custom.component.NumberText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/quantityll"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/amountLabel"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/amountTextView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.25"
                    android:background="#00000000"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:gravity="right|center_vertical"
                    android:inputType="numberDecimal"
                    android:text="0"
                    android:textColor="#004000"
                    custom:precision="2" >
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/quantityLabel"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/quantityEditText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.25"
                    android:background="#00000000"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:gravity="right|center_vertical"
                    android:hint="1"
                    android:inputType="number"
                    android:maxLength="7"
                    android:textColor="#003771" >
                </EditText>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#CCCCCC"
                android:padding="15dp" />

            <LinearLayout
                android:id="@+id/expense_type"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/detailTypeLabel"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detailTypeLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    android:text="@string/detailTypeLabel"
                    android:textColor="#003771" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#CCCCCC"
                android:padding="15dp" />

            <LinearLayout
                android:id="@+id/expense_type"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/currencyLabel"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/currencyLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.35"
                    android:gravity="right"
                    android:text="@string/currencyLabel"
                    android:textColor="#003771" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:layout_marginLeft="18dp"
                    android:text="@string/exchangeRateLabel"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/exchangeRateLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.35"
                    android:background="#00000000"
                    android:cursorVisible="false"
                    android:gravity="right"
                    android:inputType="numberDecimal"
                    android:text="@string/exchangeRateLabel"
                    android:textColor="#003771"
                    android:maxLines="7" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#CCCCCC"
                android:padding="15dp" />

            <LinearLayout
                android:id="@+id/place"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/placeLabel"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/placeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="#00000000"
                    android:cursorVisible="false"
                    android:gravity="right"
                    android:singleLine="true"
                    android:text="无法定位"
                    android:textColor="#003771"
                    android:textSize="15dp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#CCCCCC"
                android:padding="15dp" />

            <LinearLayout
                android:id="@+id/llcalendar_id"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/dateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/dateLabel"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dateFromTextView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center"
                    android:text="2014-09-27"
                    android:textColor="#003771" />

                <TextView
                    android:id="@+id/dateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/dateLabel1"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dateToTextView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="right|center"
                    android:text="2014-09-31"
                    android:textColor="#003771" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="#CCCCCC"
                android:padding="15dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/expense_desc_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="0.25"
            android:background="@drawable/corners_desc_bg"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/buttonll"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="0.1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:background="@drawable/detail_line_button_selector"
                android:text="@string/savelabel"
                android:textColor="#fff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/add_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/corners_press_detail_bg"
                android:text="再记一笔"
                android:textColor="#fff"
                android:textSize="20sp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>